# edno

./: .gitignore  README.md  main.py  pyproject.toml  test.py
.github/workflows/: release_linux.yaml  test_linux.yaml
edno/: Arrow.py  EdnoCanvas.py  EllipseNode.py  PolyNode.py  TextBox.py  __init__.py  arrow.py  nodes.py  text_box.py
tests/: test_edno.py
